# visual_servoing_guidance_ros

./: CMakeLists.txt  README.md  package.xml
include/: Control_quadcopter.h  DJI_servoing.h  DJI_servoing_traj.h  DJI_servoing_vel.h  Line_detector.h  PID_controller.h
launch/: Guidance_servoing_all.launch  start.launch  start.launch~  world.launch
rviz/: upward_cam.rviz
src/: Control_quadcopter.cpp  Control_quadcopter.h  DJI_line_following_and_servoing.cpp  DJI_servoing.cpp  DJI_servoing_traj.cpp  DJI_servoing_vel.cpp  GuidanceNode.cpp  GuidanceNodeCalibration.cpp  GuidanceNodeFollowing.cpp  Line_detector.cpp  PID_Controller.cpp  PID_controller.cpp  PID_node.cpp  real_life_node.cpp  sim_node.cpp
urdf/: quadrotor_with_upward_facing_cam.gazebo.xacro  quadrotor_with_upward_facing_cam.urdf.xacro
worlds/: single_line.dae  three_lines.dae  transmission_lines_horizontal.world
