<?xml version="1.0"?>
<package>
  <name>GuidanceRos</name>
  <version>0.0.1</version>
  <description>The Guidance Ros package</description>

  <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="Ketan@todo.todo">Ketan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
    <build_depend>roscpp</build_depend>
  <build_depend>spektrum</build_depend>
  <build_depend>ca_common</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>math_utils</build_depend>
  <build_depend>dji_sdk</build_depend>
  <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>message_runtime</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>spektrum</run_depend>
  <run_depend>ca_common</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>math_utils</run_depend>
  <run_depend>dji_sdk</run_depend>

  <export>
  </export>
</package>

